@@ -1,4 +1,5 @@
 Sigil 0.5.2 TBA
+    - Fix issue 1251: Merge does not work if you previously used split chapter.
     - Fix issue 1249: Replace All in All HTML Files leaves cursor at the
       bottom.
     - Fix issue 1247: Cannot rename file extension in book browser and rename
